# GodCam

./: CMakeLists.txt  README.md
externalLibs/: barrier.h
include/: segment.h  syncCams.h
src/: segment.cpp  syncCams.cpp  test.cpp
