cmake_minimum_required(VERSION 3.1)
set (CMAKE_CXX_STANDARD 11)
set(THREADS_PREFER_PTHREAD_FLAG ON)
project( GodCam )
find_package( OpenCV REQUIRED)
find_package(Threads REQUIRED)
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories( include )
include_directories( externalLibs )
file(GLOB SOURCES "src/*.cpp" )
add_executable( GodCam ${SOURCES} )
target_link_libraries( GodCam ${OpenCV_LIBS} Threads::Threads )
